Added design for the moviesTable, added seeding database when the database is set it comes with 5 preset movies.

--- a/Client/style.css
+++ b/Client/style.css
@@ -21,3 +21,12 @@ body {
     width: auto;
     margin-left: 16px;
 }
+
+.moviesTable {
+    margin-bottom: 0px;
+}
+
+.table-btn {
+    margin-right: auto;
+    width: 100px;
+}
